--- a/src/template.html
+++ b/src/template.html
@@ -65,31 +65,31 @@
               <span class="temperature" id="temperature"> 19</span><span class="picture_text">°<a href="#" id="celsius">C</a> | °<a href="#" id="fahrenheit">F</a></p>
           </span></div>
           <div class="row">
-            <div class="col">
+            <div class="col firstDay">
               <img
                 src="https://img.icons8.com/cotton/64/000000/partly-cloudy-day--v2.png"
               />
               <p>Monday <br />+15°C</p>
             </div>
-            <div class="col">
+            <div class="col secondDay">
               <img
                 src="https://img.icons8.com/cotton/64/000000/partly-cloudy-day--v2.png"
               />
               <p>Monday <br />+15°C</p>
             </div>
-            <div class="col">
+            <div class="col thirdDay">
               <img
                 src="https://img.icons8.com/cotton/64/000000/partly-cloudy-day--v2.png"
               />
               <p>Monday <br />+15°C</p>
             </div>
-            <div class="col">
+            <div class="col fourthDay">
               <img
                 src="https://img.icons8.com/cotton/64/000000/partly-cloudy-day--v2.png"
               />
               <p>Monday <br />+15°C</p>
             </div>
-            <div class="col">
+            <div class="col fifthDay">
               <img
                 src="https://img.icons8.com/cotton/64/000000/partly-cloudy-day--v2.png"
               />
@@ -98,7 +98,8 @@
           
           </div>
           </div>
-        </div></section>
+        </div>
+   </section>
       </main>
 
     </div>
