--- a/src/template.html
+++ b/src/template.html
@@ -62,38 +62,33 @@
               class="picture"
             />
             <p class="picture_temperature">
-              <span class="temperature" id="temperature"> 19</span><span class="picture_text">°<a href="#" id="celsius">C</a> | °<a href="#" id="fahrenheit">F</a></p>
+              <span class="temperature" id="temperature"> 19</span><span class="picture_text">°<a href="#" class="celsius">C</a> | °<a href="#" class="fahrenheit">F</a></p>
           </span></div>
           <div class="row">
-            <div class="col firstDay">
+           
+            <div class="col ">
               <img
                 src="https://img.icons8.com/cotton/64/000000/partly-cloudy-day--v2.png"
               />
-              <p>Monday <br />+15°C</p>
+              <p id="secondDay">Monday <br />+15°C</p>
             </div>
-            <div class="col secondDay">
+            <div class="col ">
               <img
                 src="https://img.icons8.com/cotton/64/000000/partly-cloudy-day--v2.png"
               />
-              <p>Monday <br />+15°C</p>
+              <p id="thirdDay">Monday <br />+15°C</p>
             </div>
-            <div class="col thirdDay">
+            <div class="col ">
               <img
                 src="https://img.icons8.com/cotton/64/000000/partly-cloudy-day--v2.png"
               />
-              <p>Monday <br />+15°C</p>
+              <p id="fourthDay">Monday <br />+15°C</p>
             </div>
-            <div class="col fourthDay">
+            <div class="col ">
               <img
                 src="https://img.icons8.com/cotton/64/000000/partly-cloudy-day--v2.png"
               />
-              <p>Monday <br />+15°C</p>
-            </div>
-            <div class="col fifthDay">
-              <img
-                src="https://img.icons8.com/cotton/64/000000/partly-cloudy-day--v2.png"
-              />
-              <p>Monday <br />+15°C</p>
+              <p id="fifthDay">Monday <br />+15°C</p>
             </div>
           
           </div>
