--- a/src/template.html
+++ b/src/template.html
@@ -56,38 +56,27 @@
             </ul>
           </div>
 
-          <div class="col-4">
-            <img
-              src="https://img.icons8.com/cotton/128/000000/sun--v2.png"
-              class="picture"
-            />
+          <div class="col-4 ">
+            <div class=" mainWeatherIcon"></div>
             <p class="picture_temperature">
               <span class="temperature" id="temperature"> 19</span><span class="picture_text">°<a href="#" class="celsius">C</a> | °<a href="#" class="fahrenheit">F</a></p>
           </span></div>
           <div class="row">
            
             <div class="col ">
-              <img
-                src="https://img.icons8.com/cotton/64/000000/partly-cloudy-day--v2.png"
-              />
+              <div class=" secondWeatherIcon"></div>
               <p id="secondDay">Monday <br />+15°C</p>
             </div>
             <div class="col ">
-              <img
-                src="https://img.icons8.com/cotton/64/000000/partly-cloudy-day--v2.png"
-              />
+             <div class=" thirdWeatherIcon"></div>
               <p id="thirdDay">Monday <br />+15°C</p>
             </div>
             <div class="col ">
-              <img
-                src="https://img.icons8.com/cotton/64/000000/partly-cloudy-day--v2.png"
-              />
+            <div class=" fourthWeatherIcon"></div>
               <p id="fourthDay">Monday <br />+15°C</p>
             </div>
             <div class="col ">
-              <img
-                src="https://img.icons8.com/cotton/64/000000/partly-cloudy-day--v2.png"
-              />
+             <div class=" fifthWeatherIcon"></div>
               <p id="fifthDay">Monday <br />+15°C</p>
             </div>
           
