ver. 1.0.5 pre-release build

--- a/src/template.html
+++ b/src/template.html
@@ -64,19 +64,19 @@
           <div class="row">
            
             <div class="col ">
-              <div class=" secondWeatherIcon"></div>
+              <div class="weekIcon secondWeatherIcon"></div>
               <p id="secondDay">Monday <br />+15°C</p>
             </div>
             <div class="col ">
-             <div class=" thirdWeatherIcon"></div>
+             <div class="weekIcon thirdWeatherIcon"></div>
               <p id="thirdDay">Monday <br />+15°C</p>
             </div>
             <div class="col ">
-            <div class=" fourthWeatherIcon"></div>
+            <div class="weekIcon fourthWeatherIcon"></div>
               <p id="fourthDay">Monday <br />+15°C</p>
             </div>
             <div class="col ">
-             <div class=" fifthWeatherIcon"></div>
+             <div class="weekIcon fifthWeatherIcon"></div>
               <p id="fifthDay">Monday <br />+15°C</p>
             </div>
           
